--- a/index.html
+++ b/index.html
@@ -19,50 +19,50 @@
             <h2>shipping free worldwide as usual</h2>
         </section>
         <section>
-            <button><img src="images/iconen/menu.png"></button>
+            <button class="hamburger"><img src="images/iconen/menu.png"></button>
             <nav>
                 <ul>
-                    <li>top selling</li>
-                    <li>newest additions</li>
-                    <li>trending</li>
-                    <li>bullet journal</li>
-                    <li>tsuki collection</li>
-                    <li>bags</li>
-                    <li>gifts</li>
+                    <li><a>top selling</a></li>
+                    <li><a>newest additions</a></li>
+                    <li><a>trending</a></li>
+                    <li><a>bullet journal</a></li>
+                    <li><a>tsuki collection</a></li>
+                    <li><a>bags</a></li>
+                    <li><a>gifts</a></li>
                 </ul>
                 <ul>
                     <li>
                         <h3>Browse by Catergory</h3>
                     </li>
-                    <li>Notebooks</li>
-                    <li>Tote Bags</li>
-                    <li>Pens</li>
-                    <li>Pencil Cases</li>
-                    <li>Stickers</li>
-                    <li>Backpacks</li>
-                    <li>Plushies</li>
-                    <li>Phone Cases</li>
-                    <li>Diffusers</li>
-                    <li>Desk Accessories</li>
-                    <li>Washi Tape</li>
-                    <li>Pins</li>
-                    <li>Stamps</li>
-                    <li>Sticky Notes</li>
-                    <li>Tsuki Collection</li>
-                    <li>Accessories</li>
-                    <li>Search</li>
+                    <li><a>Notebooks</a></li>
+                    <li><a>Tote Bags</a></li>
+                    <li><a>Pens</a></li>
+                    <li><a>Pencil Cases</a></li>
+                    <li><a>Stickers</a></li>
+                    <li><a>Backpacks</a></li>
+                    <li><a>Plushies</a></li>
+                    <li><a>Phone Cases</a></li>
+                    <li><a>Diffusers</a></li>
+                    <li><a>Desk Accessories</a></li>
+                    <li><a>Washi Tape</a></li>
+                    <li><a>Pins</a></li>
+                    <li><a>Stamps</a></li>
+                    <li><a>Sticky Notes</a></li>
+                    <li><a>Tsuki Collection</a></li>
+                    <li><a>Accessories</a></li>
+                    <li><a>Search</a></li>
                 </ul>
                 <ul>
                     <li>
                         <h3>Customer Info</h3>
                     </li>
-                    <li>Blog</li>
-                    <li>About us</li>
-                    <li>Shipping &amp; Returns</li>
-                    <li>Common Questions</li>
-                    <li>Customer Reviews</li>
-                    <li>Blogger or Influencer?</li>
-                    <li>Contact Us</li>
+                    <li><a>Blog</a></li>
+                    <li><a>About us</a></li>
+                    <li><a>Shipping &amp; Returns</a></li>
+                    <li><a>Common Questions</a></li>
+                    <li><a>Customer Reviews</a></li>
+                    <li><a>Blogger or Influencer?</a></li>
+                    <li><a>Contact Us</a></li>
                 </ul>
             </nav>
             <a><img src="images/boringlonggrey_300x.png" class="headerimg" alt="Notebook Therapy" alt="go to homepage"></a>
@@ -174,101 +174,111 @@
         <!--Slideshow-->
         <section>
             <article>
+                <div class="slider">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
                 <ol>
                     <li><img src="images/slider/1_2ca86cdc-679c-480e-888b-b125909f5b10_600x.png" alt="instagram1"></li>
                     <li><img src="images/slider/2_600x.png" alt="instagram1"></li>
                     <li><img src="images/slider/3_600x.png" alt="instagram1"></li>
                     <li><img src="images/slider/4_600x.png" alt="instagram1"></li>
                 </ol>
+                <div class="buttons">
+                    <a></a>
+                    <a></a>
+                    <a></a>
+                </div>
             </article>
         </section>
         <!--2020 Picks-->
         <h2><span>2020 picks</span></h2>
         <section>
-                <a>
-                    <article>
-                        <img src="images/2020_picks/product-image-476618778_300x.jpg" alt="mildliner_highlighters">
-                        <h4>Zebra Mildliner Double Ended Highlighter</h4>
-                        <p>€18.57 EUR €15.19 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/2020_picks/Large-Capacity-Pen-Pencil-Bag-Multifunction-Pencil-Case-Bag-Storage-Organizer-Pencil-Case-21cm-x-11cm_ee29dcca-9d4c-4d77-9a94.jpg" alt="stationery_organiser">
-                        <h4>Little Character Stationery Organiser</h4>
-                        <p>€16.04 EUR €12.66 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/2020_picks/Creative-agenda-romance-cherry-blossom-notebook-illustration-grid-hand-painted-school-diary-office-supplies-files_300x.jpg" alt="blossom_notebook">
-                        <h4>Romantic Cherry Blossom Notebook</h4>
-                        <p>€24.49 EUR €21.95 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/2020_picks/100-Colors-Dual-Brush-Art-Markers-Pen-Fine-Tip-and-Brush-Tip-Great-for-Bullet-Journal_c54f12ae-e0e7-43ab-9959-47e32e7e9097_30.jpg" alt="dual_brush_pens">
-                        <h4>Dual Brush Pens - Sets of 12/24/36/48/100</h4>
-                        <p>€16.88 EUR €14.35 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/2020_picks/12-Pcs-lot-Gel-Pen-0-5mm-colour-Ink-Pen-Maker-Pen-School-Office-Supply-MUJI_300x.jpg" alt="muji_gel_pens">
-                        <h4>MUJI style Gel Pens - Set of 12</h4>
-                        <p>€18.58 EUR €16.05 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/2020_picks/product-image-394831620_300x.jpg" alt="watercolour_brushpens">
-                        <h4>Watercolour Brush Pens - Set of 20</h4>
-                        <p>€35.48 EUR €27.87 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/2020_picks/4pcs-set-Cute-Gel-Pens-Sakura-powder-mint-green-Pen-Kawaii-Ballpoint-School-Canetas-Boligrafos-Gift_300x.jpg" alt="sakura_petals_set">
-                        <h4>Sakura Petals Set - 4 Pens + Case Included!</h4>
-                        <p>€12.67 EUR €11.81 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/2020_picks/product-image-326413417_300x.jpg" alt="gradient_sticky_memo_notes">
-                        <h4>Gradient Sticky Memo Notes</h4>
-                        <p>€10.97 EUR €8.43 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/2020_picks/Happy-Half-Avocado-Family-Plush-Toy-Shy-Figured-Baby-Green-Fruit-Plant-Plushie-Squishy-Toys-Props_300x.jpg" alt="happy_avocado_plushie">
-                        <h4>Happy Avocado Plushie</h4>
-                        <p>€25.33 EUR 21.95 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/2020_picks/Penguin-poodle-sheep-embroidery-Corduroy-phone-case-For-iphone-X-XR-XS-XS-Max-Hard-phone_300x.jpg" alt="cheeky_cord_iphone_case">
-                        <h4>Cheeky Cord iPhone Case</h4>
-                        <p>€14.35 EUR €12.66 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/2020_picks/Cartoon-Panda-Cats-Shark-Cable-Protector-Data-Line-Cord-Protector-Protective-Cable-Winder-Cover-For-iPhone_300x.jpg" alt="animal_cord_protector">
-                        <h4>Hungry Animals Cord Protector</h4>
-                        <p>€7.60 EUR €6.74 EUR</p>
-                    </article>
-                </a>
-                <a>
-                    <article>
-                        <img src="images/2020_picks/Domikee-2019-candy-school-wall-calendar-time-planner-paper-pad-stationery-21-days-planner-monthly-planner_d15eaa29-9ac0-4744-.jpg" alt="wall_planner_stickers">
-                        <h4>Sakura Habits Wall Planner + Stickers</h4>
-                        <p>€16.88 EUR €9.28 EUR</p>
-                    </article>
-                </a>
+            <a>
+                <article>
+                    <img src="images/2020_picks/product-image-476618778_300x.jpg" alt="mildliner_highlighters">
+                    <h4>Zebra Mildliner Double Ended Highlighter</h4>
+                    <p>€18.57 EUR €15.19 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/2020_picks/Large-Capacity-Pen-Pencil-Bag-Multifunction-Pencil-Case-Bag-Storage-Organizer-Pencil-Case-21cm-x-11cm_ee29dcca-9d4c-4d77-9a94.jpg" alt="stationery_organiser">
+                    <h4>Little Character Stationery Organiser</h4>
+                    <p>€16.04 EUR €12.66 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/2020_picks/Creative-agenda-romance-cherry-blossom-notebook-illustration-grid-hand-painted-school-diary-office-supplies-files_300x.jpg" alt="blossom_notebook">
+                    <h4>Romantic Cherry Blossom Notebook</h4>
+                    <p>€24.49 EUR €21.95 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/2020_picks/100-Colors-Dual-Brush-Art-Markers-Pen-Fine-Tip-and-Brush-Tip-Great-for-Bullet-Journal_c54f12ae-e0e7-43ab-9959-47e32e7e9097_30.jpg" alt="dual_brush_pens">
+                    <h4>Dual Brush Pens - Sets of 12/24/36/48/100</h4>
+                    <p>€16.88 EUR €14.35 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/2020_picks/12-Pcs-lot-Gel-Pen-0-5mm-colour-Ink-Pen-Maker-Pen-School-Office-Supply-MUJI_300x.jpg" alt="muji_gel_pens">
+                    <h4>MUJI style Gel Pens - Set of 12</h4>
+                    <p>€18.58 EUR €16.05 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/2020_picks/product-image-394831620_300x.jpg" alt="watercolour_brushpens">
+                    <h4>Watercolour Brush Pens - Set of 20</h4>
+                    <p>€35.48 EUR €27.87 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/2020_picks/4pcs-set-Cute-Gel-Pens-Sakura-powder-mint-green-Pen-Kawaii-Ballpoint-School-Canetas-Boligrafos-Gift_300x.jpg" alt="sakura_petals_set">
+                    <h4>Sakura Petals Set - 4 Pens + Case Included!</h4>
+                    <p>€12.67 EUR €11.81 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/2020_picks/product-image-326413417_300x.jpg" alt="gradient_sticky_memo_notes">
+                    <h4>Gradient Sticky Memo Notes</h4>
+                    <p>€10.97 EUR €8.43 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/2020_picks/Happy-Half-Avocado-Family-Plush-Toy-Shy-Figured-Baby-Green-Fruit-Plant-Plushie-Squishy-Toys-Props_300x.jpg" alt="happy_avocado_plushie">
+                    <h4>Happy Avocado Plushie</h4>
+                    <p>€25.33 EUR 21.95 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/2020_picks/Penguin-poodle-sheep-embroidery-Corduroy-phone-case-For-iphone-X-XR-XS-XS-Max-Hard-phone_300x.jpg" alt="cheeky_cord_iphone_case">
+                    <h4>Cheeky Cord iPhone Case</h4>
+                    <p>€14.35 EUR €12.66 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/2020_picks/Cartoon-Panda-Cats-Shark-Cable-Protector-Data-Line-Cord-Protector-Protective-Cable-Winder-Cover-For-iPhone_300x.jpg" alt="animal_cord_protector">
+                    <h4>Hungry Animals Cord Protector</h4>
+                    <p>€7.60 EUR €6.74 EUR</p>
+                </article>
+            </a>
+            <a>
+                <article>
+                    <img src="images/2020_picks/Domikee-2019-candy-school-wall-calendar-time-planner-paper-pad-stationery-21-days-planner-monthly-planner_d15eaa29-9ac0-4744-.jpg" alt="wall_planner_stickers">
+                    <h4>Sakura Habits Wall Planner + Stickers</h4>
+                    <p>€16.88 EUR €9.28 EUR</p>
+                </article>
+            </a>
         </section>
         <section>
 
