--- a/index.html
+++ b/index.html
@@ -163,33 +163,16 @@
             </a>
             <h3><button>Show more</button></h3>
         </section>
-        <section>
-            <h2>Join 1 million+ followers on Instagram</h2>
-            <div class="container_slideshow">
-                <div class="img_slideshow">
-
-                </div>
-            </div>
-        </section>
         <!--Slideshow-->
         <section>
+            <h2>Join 1 million+ followers on Instagram</h2>
             <article>
-                <div class="slider">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
                 <ol>
                     <li><img src="images/slider/1_2ca86cdc-679c-480e-888b-b125909f5b10_600x.png" alt="instagram1"></li>
                     <li><img src="images/slider/2_600x.png" alt="instagram1"></li>
                     <li><img src="images/slider/3_600x.png" alt="instagram1"></li>
                     <li><img src="images/slider/4_600x.png" alt="instagram1"></li>
                 </ol>
-                <div class="buttons">
-                    <a></a>
-                    <a></a>
-                    <a></a>
-                </div>
             </article>
         </section>
         <!--2020 Picks-->
@@ -358,4 +341,6 @@
         <h3>shop</h3>
     </footer>
     <script type="text/javascript" src="scripts/script.js"></script>
-</body></html>
+</body>
+
+</html>
