--- a/tweedepagina.html
+++ b/tweedepagina.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="jouw naam">
@@ -13,59 +14,64 @@
 </head>
 
 <body>
-        <header>
+    <header>
         <section>
             <h2>shipping free worldwide as usual</h2>
         </section>
         <section>
+            <button class="hamburger"><img src="images/iconen/menu.png"></button>
             <nav>
-                <button><img src="images/iconen/menu.png" alt="menu"></button>
-                    <ul>
-                        <li>top selling</li>
-                        <li>newest additions</li>
-                        <li>trending</li>
-                        <li>bullet journal</li>
-                        <li>tsuki collection</li>
-                        <li>bags</li>
-                        <li>gifts</li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <h3>Browse by Catergory</h3>
-                        </li>
-                        <li>Notebooks</li>
-                        <li>Tote Bags</li>
-                        <li>Pens</li>
-                        <li>Pencil Cases</li>
-                        <li>Stickers</li>
-                        <li>Backpacks</li>
-                        <li>Plushies</li>
-                        <li>Phone Cases</li>
-                        <li>Diffusers</li>
-                        <li>Desk Accessories</li>
-                        <li>Washi Tape</li>
-                        <li>Pins</li>
-                        <li>Stamps</li>
-                        <li>Sticky Notes</li>
-                        <li>Tsuki Collection</li>
-                        <li>Accessories</li>
-                        <li>Search</li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <h3>Customer Info</h3>
-                        </li>
-                        <li>Blog</li>
-                        <li>About us</li>
-                        <li>Shipping &amp; Returns</li>
-                        <li>Common Questions</li>
-                        <li>Customer Reviews</li>
-                        <li>Blogger or Influencer?</li>
-                        <li>Contact Us</li>
-                    </ul>
+                <ul>
+                    <li><a>top selling</a></li>
+                    <li><a>newest additions</a></li>
+                    <li><a>trending</a></li>
+                    <li><a>bullet journal</a></li>
+                    <li><a>tsuki collection</a></li>
+                    <li><a>bags</a></li>
+                    <li><a>gifts</a></li>
+                </ul>
+                <ul>
+                    <li>
+                        <h3>Browse by Catergory</h3>
+                    </li>
+                    <li><a>Notebooks</a></li>
+                    <li><a>Tote Bags</a></li>
+                    <li><a>Pens</a></li>
+                    <li><a>Pencil Cases</a></li>
+                    <li><a>Stickers</a></li>
+                    <li><a>Backpacks</a></li>
+                    <li><a>Plushies</a></li>
+                    <li><a>Phone Cases</a></li>
+                    <li><a>Diffusers</a></li>
+                    <li><a>Desk Accessories</a></li>
+                    <li><a>Washi Tape</a></li>
+                    <li><a>Pins</a></li>
+                    <li><a>Stamps</a></li>
+                    <li><a>Sticky Notes</a></li>
+                    <li><a>Tsuki Collection</a></li>
+                    <li><a>Accessories</a></li>
+                    <li><a>Search</a></li>
+                </ul>
+                <ul>
+                    <li>
+                        <h3>Customer Info</h3>
+                    </li>
+                    <li><a>Blog</a></li>
+                    <li><a>About us</a></li>
+                    <li><a>Shipping &amp; Returns</a></li>
+                    <li><a>Common Questions</a></li>
+                    <li><a>Customer Reviews</a></li>
+                    <li><a>Blogger or Influencer?</a></li>
+                    <li><a>Contact Us</a></li>
+                </ul>
             </nav>
             <a><img src="images/boringlonggrey_300x.png" class="headerimg" alt="Notebook Therapy" alt="go to homepage"></a>
             <a><button class="basket">Mandje</button></a>
         </section>
+        <section>
+        </section>
     </header>
-</body></html>
+</body>
+<script type="text/javascript" src="scripts/script.js"></script>
+
+</html>
