--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </ul>
             </nav>
             <a><img src="images/boringlonggrey_300x.png" class="headerimg" alt="Notebook Therapy" alt="go to homepage"></a>
-            <a><button class="basket">Mandje</button></a>
+            <a><button><img src="images/iconen/shopping-bag.png" alt="shoppingbag"></button></a>
         </section>
         <section>
             <img src="images/header_img/headerlogo.png" alt="header img">
