--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="styles/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -66,7 +68,7 @@
                 </ul>
             </nav>
             <a><img src="images/boringlonggrey_300x.png" class="headerimg" alt="Notebook Therapy" alt="go to homepage"></a>
-            <a><button><img src="images/iconen/shopping-bag.png" alt="shoppingbag"></button></a>
+            <button><img src="images/iconen/shopping-bag.png" alt="shoppingbag"></button>
         </section>
         <section>
             <img src="images/header_img/headerlogo.png" alt="header img">
@@ -306,41 +308,109 @@
                 </article>
             </a>
             <a>
-                <ul class="categories">
-                    <div class="categoriesli">
-                        <li>Top Selling</li>
-                        <li>Trending</li>
-                        <li>New Additions</li>
-                        <li>Pens</li>
-                        <li>Stickers</li>
-                        <li>Plushies</li>
-                        <li>Pencil Cases</li>
-                        <li>Notebooks</li>
-                        <li>Washi Tape</li>
-                        <li>Sticky Notes</li>
-                        <li>Bags</li>
-                        <li>Accessories</li>
-                    </div>
+                <ul>
+                    <li>Top Selling</li>
+                    <li>Trending</li>
+                    <li>New Additions</li>
+                    <li>Pens</li>
+                    <li>Stickers</li>
+                    <li>Plushies</li>
+                    <li>Pencil Cases</li>
+                    <li>Notebooks</li>
+                    <li>Washi Tape</li>
+                    <li>Sticky Notes</li>
+                    <li>Bags</li>
+                    <li>Accessories</li>
                 </ul>
             </a>
         </section>
         <section>
             <h2>Blog Posts</h2>
-            <a>
-                <article>
-                    <img src="images/blog_posts/unnamed_877faeec-9774-4e08-ab56-92f33b179b45_x370.jpg" alt="halloween_blogposts">
-                    <h4>free halloween bullet journal printable sticker sheet</h4>
-                    <h5>by notebook therapy on october 31, 2020</h5>
-                    <p>free halloween bullet journal printable sticker sheet HAPPY HALLOWEEN to celebrate the spooky season, our design team at notebook therapy created this cute + spooky free bullet journal</p>
-                </article>
-            </a>
+            <article>
+                <img src="images/blog_posts/unnamed_b46f6fce-3454-4fef-b73f-0e67dd1ee2fb_x370.jpg" alt="monthly_phone_wallpaper">
+                <div class="text">
+                    <h4>Monthly Phone Wallpaper</h4>
+                    <h5>By notebook therapy x @Milktuart on november 26, 2020</h5>
+                    <p>Monthly Phone Wallpaper We're back with another phone wallpaper for you this month! This wallpaper is extra special because it was created by @milkkoyo! She is known for her super cute...</p>
+                </div>
+                <img src="images/blog_posts/unnamed_5c54d735-f8f2-4d4a-8703-8dde0b3a3d5d_x370.png" alt="december_blogposts">
+                <div class="text">
+                    <h4></h4>
+                    <h5></h5>
+                    <p></p>
+                </div>
+                <img src="images/blog_posts/unnamed_f29e2ea8-3894-4edf-841c-88cd951ed5e1_x370.jpg" alt="10reasonstobulletjournal_blogposts">
+                <div class="text">
+                    <h4></h4>
+                    <h5></h5>
+                    <p></p>
+                </div>
+                <img src="images/blog_posts/unnamed_ac740ee4-6886-40b4-86b8-3188e3800cde_x370.jpg" alt="midnighteditionbulletjournal_blogposts">
+                <div class="text">
+                    <h4></h4>
+                    <h5></h5>
+                    <p></p>
+                </div>
+                <img src="images/blog_posts/unnamed_e8eb8655-649e-4fdc-9710-a341861c7911_x370.jpg" alt="printable_blogposts">
+                <div class="text">
+                    <h4></h4>
+                    <h5></h5>
+                    <p></p>
+                </div>
+                <img src="images/blog_posts/unnamed_877faeec-9774-4e08-ab56-92f33b179b45_x370.jpg" alt="halloween_blogposts">
+                <div class="text">
+                    <h4></h4>
+                    <h5></h5>
+                    <p></p>
+                </div>
+                <div>
+                    <span class="dot" onclick="Slide1"></span>
+                    <span class="dot" onclick="Slide2"></span>
+                    <span class="dot" onclick="Slide3"></span>
+                    <span class="dot" onclick="Slide4"></span>
+                    <span class="dot" onclick="Slide5"></span>
+                    <span class="dot" onclick="Slide6"></span>
+                </div>
+            </article>
         </section>
     </main>
     <footer>
-        <h3>Info</h3>
-        <h3>shop</h3>
+        <p>Join over <span>1 million</span> followers on instagram &#169; NotebookTherapy 2020</p>
+        <section>
+            <h3>Info</h3>
+            <ul>
+                <li><a>Blog</a></li>
+                <li><a>About us</a></li>
+                <li><a>Shipping &amp; Returns</a></li>
+                <li><a>Common Questions</a></li>
+                <li><a>Customer Reviews</a></li>
+                <li><a>Blogger or Influencer?</a></li>
+                <li><a>Contact us</a></li>
+            </ul>
+        </section>
+        <section>
+            <h3>shop</h3>
+            <ul>
+                <li><a>New Additions</a></li>
+                <li><a>Top Selling</a></li>
+                <li><a>Notebooks</a></li>
+                <li><a>Phone Cases</a></li>
+                <li><a>Bags</a></li>
+                <li><a>Pens</a></li>
+                <li><a>Pencil Cases</a></li>
+                <li><a>Stickers</a></li>
+                <li><a>Washi Tape</a></li>
+                <li><a>Gift Cards</a></li>
+                <li><a>More +</a></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Join for special updates &amp; discounts</h2>
+            <form>
+                <input type="text" placeholder="enter your email address">
+                <button>Join</button> 
+            </form>
+        </section>
     </footer>
     <script type="text/javascript" src="scripts/script.js"></script>
-</body>
-
-</html>
+</body></html>
