--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <p><span class="oldprice">€25.33 EUR</span> €18.57 EUR</p>
                 </article>
             </a>
-            <a>
+            <a  href="detailpagina.html">
                 <article>
                     <img src="images/trending_now/2_9ec899a1-399d-449c-a5a1-7fd2b3dba521_300x.jpg" alt="pencil_case_winter">
                     <h4>Tsuki Pop-up Pencil Case 'Winter Edition'</h4>
@@ -408,9 +408,11 @@
             <h2>Join for special updates &amp; discounts</h2>
             <form>
                 <input type="text" placeholder="enter your email address">
-                <button>Join</button> 
+                <button>Join</button>
             </form>
         </section>
     </footer>
     <script type="text/javascript" src="scripts/script.js"></script>
-</body></html>
+</body>
+
+</html>
