--- a/detailpagina.html
+++ b/detailpagina.html
@@ -18,98 +18,119 @@
 <body>
     <header>
         <section>
-            <h2>shipping free worldwide as usual</h2>
+            <h3>shipping free worldwide as usual</h3>
         </section>
         <section>
-            <button class="hamburger"><img src="images/iconen/menu.png"></button>
             <nav>
-                <ul>
-                    <li><a>top selling</a></li>
-                    <li><a>newest additions</a></li>
-                    <li><a>trending</a></li>
-                    <li><a>bullet journal</a></li>
-                    <li><a>tsuki collection</a></li>
-                    <li><a>bags</a></li>
-                    <li><a>gifts</a></li>
-                </ul>
-                <ul>
-                    <li>
-                        <h3>Browse by Catergory</h3>
-                    </li>
-                    <li><a>Notebooks</a></li>
-                    <li><a>Tote Bags</a></li>
-                    <li><a>Pens</a></li>
-                    <li><a>Pencil Cases</a></li>
-                    <li><a>Stickers</a></li>
-                    <li><a>Backpacks</a></li>
-                    <li><a>Plushies</a></li>
-                    <li><a>Phone Cases</a></li>
-                    <li><a>Diffusers</a></li>
-                    <li><a>Desk Accessories</a></li>
-                    <li><a>Washi Tape</a></li>
-                    <li><a>Pins</a></li>
-                    <li><a>Stamps</a></li>
-                    <li><a>Sticky Notes</a></li>
-                    <li><a>Tsuki Collection</a></li>
-                    <li><a>Accessories</a></li>
-                    <li><a>Search</a></li>
-                </ul>
-                <ul>
-                    <li>
-                        <h3>Customer Info</h3>
-                    </li>
-                    <li><a>Blog</a></li>
-                    <li><a>About us</a></li>
-                    <li><a>Shipping &amp; Returns</a></li>
-                    <li><a>Common Questions</a></li>
-                    <li><a>Customer Reviews</a></li>
-                    <li><a>Blogger or Influencer?</a></li>
-                    <li><a>Contact Us</a></li>
-                </ul>
+                <div class="navbar">
+                    <button class="hamburger"><img src="images/iconen/menu.png"></button>
+                    <button><img src="images/iconen/loupe.svg" alt="search"></button>
+                    <a><img src="images/boringlonggrey_300x.png" class="headerimg" alt="Notebook Therapy" alt="go to homepage"></a>
+                    <button><img src="images/iconen/shopping-bag.png" alt="shoppingbag"></button>
+                </div>
+                <div class="menucontent">
+                    <ul class="desktopmenu">
+                        <li><a>all categories</a></li>
+                        <li><a>newest additions</a></li>
+                        <li><a>trending</a></li>
+                        <li><a>bullet journal</a></li>
+                        <li><a>tsuki collection</a></li>
+                        <li><a>bags</a></li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <h3>Browse by Catergory</h3>
+                        </li>
+                        <li><a>Notebooks</a></li>
+                        <li><a>Tote Bags</a></li>
+                        <li><a>Pens</a></li>
+                        <li><a>Pencil Cases</a></li>
+                        <li><a>Stickers</a></li>
+                        <li><a>Backpacks</a></li>
+                        <li><a>Plushies</a></li>
+                        <li><a>Phone Cases</a></li>
+                        <li><a>Diffusers</a></li>
+                        <li><a>Desk Accessories</a></li>
+                        <li><a>Washi Tape</a></li>
+                        <li><a>Pins</a></li>
+                        <li><a>Stamps</a></li>
+                        <li><a>Sticky Notes</a></li>
+                        <li><a>Tsuki Collection</a></li>
+                        <li><a>Accessories</a></li>
+                        <li><a>Search</a></li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <h3>Customer Info</h3>
+                        </li>
+                        <li><a>Blog</a></li>
+                        <li><a>About us</a></li>
+                        <li><a>Shipping &amp; Returns</a></li>
+                        <li><a>Common Questions</a></li>
+                        <li><a>Customer Reviews</a></li>
+                        <li><a>Blogger or Influencer?</a></li>
+                        <li><a>Contact Us</a></li>
+                    </ul>
+                </div>
             </nav>
-            <a><img src="images/boringlonggrey_300x.png" class="headerimg" alt="Notebook Therapy" alt="go to homepage"></a>
-            <a><button><img src="images/iconen/shopping-bag.png" alt="shoppingbag"></button></a>
         </section>
     </header>
     <main>
-        <section class="detailphoto">
-            <img src="images/photo_detailpagina/2_9ec899a1-399d-449c-a5a1-7fd2b3dba521_compact.jpg" alt="winteredition_etui">
-        </section>
         <section class="product_description">
+            <img class="detailphoto" src="images/detailpage/photo_detailpagina/2_9ec899a1-399d-449c-a5a1-7fd2b3dba521_compact.jpg" alt="winteredition_etui">
+            <img>
+            <div class="miniproductscroll">
+                <img src="images/detailpage/photo_detailpagina/miniphoto's/1.jpg">
+                <img src="images/detailpage/photo_detailpagina/miniphoto's/2.jpg">
+                <img src="images/detailpage/photo_detailpagina/miniphoto's/3.jpg">
+                <img src="images/detailpage/photo_detailpagina/miniphoto's/4.jpg">
+                <img src="images/detailpage/photo_detailpagina/miniphoto's/5.jpg">
+                <img src="images/detailpage/photo_detailpagina/miniphoto's/6.jpg">
+                <img src="images/detailpage/photo_detailpagina/miniphoto's/7.jpg">
+                <img src="images/detailpage/photo_detailpagina/miniphoto's/8.jpg">
+                <img src="images/detailpage/photo_detailpagina/miniphoto's/9.jpg">
+                <img src="images/detailpage/photo_detailpagina/miniphoto's/10.jpg">
+            </div>
             <h2>tsuki pop-up pencil case 'winter edition'</h2>
             <p> €16.34 EUR <span class="oldprice"> 17.97 EUR </span></p>
             <p>color</p>
-            <ul>
+            <form>
                 <li>Deep Blue</li>
                 <li>Maple Brown</li>
                 <li>Torii Red</li>
-            </ul>
+            </form>
             <button>add to cart</button>
-            <p>Introducing the tsuki 'winter edition' pop-up pencil case by notebook therapy</p>
-            <p>Our new Tsuki 'winter edition' pop-up pencil cases come in rich winter colours made from vegan leather + soft cord. Pop them down when you want a pen pot and for when you're on the go!</p>
-            <p>Choose between our cosy winter colours: deep blue, maple brown + torii red!</p>
-            <ul>
-                <li>vegan leather + soft cord</li>
-                <li>doubles as pen pot and pencil case</li>
-                <li>holds around 35 pens</li>
-                <li>20 x 12,5 cm (even fits tomboys!)</li>
-                <li>cute + functional</li>
-                <li>cosy colours perfect for winter!</li>
-            </ul>
+            <div class="tab">
+                <button class="tablinks">Description</button>
+                <button class="tablinks">Free Shipping</button>
+            </div>
+            <div id="description" class="tabcontent">
+                <p>Introducing the tsuki 'winter edition' pop-up pencil case by notebook therapy</p>
+                <p>Our new Tsuki 'winter edition' pop-up pencil cases come in rich winter colours made from vegan leather + soft cord. Pop them down when you want a pen pot and for when you're on the go!</p>
+                <p>Choose between our cosy winter colours: deep blue, maple brown + torii red!</p>
+                <ul>
+                    <li>vegan leather + soft cord</li>
+                    <li>doubles as pen pot and pencil case</li>
+                    <li>holds around 35 pens</li>
+                    <li>20 x 12,5 cm (even fits tomboys!)</li>
+                    <li>cute + functional</li>
+                    <li>cosy colours perfect for winter!</li>
+                </ul>
+            </div>
         </section>
         <section class="productimages">
-            <img src="images/photo_detailpagina/1.jpg">
-            <img src="images/photo_detailpagina/2.jpg">
-            <img src="images/photo_detailpagina/3.jpg">
-            <img src="images/photo_detailpagina/4.jpg">
-            <img src="images/photo_detailpagina/5.jpg">
-            <img src="images/photo_detailpagina/6.jpg">
-            <img src="images/photo_detailpagina/7.jpg">
-            <img src="images/photo_detailpagina/8.jpg">
-            <img src="images/photo_detailpagina/9.jpg">
-            <img src="images/photo_detailpagina/10.jpg">
-            <img src="images/photo_detailpagina/11.jpg">
-            <img src="images/photo_detailpagina/12.jpg">
+            <img src="images/detailpage/photo_detailpagina/1.jpg">
+            <img src="images/detailpage/photo_detailpagina/2.jpg">
+            <img src="images/detailpage/photo_detailpagina/3.jpg">
+            <img src="images/detailpage/photo_detailpagina/4.jpg">
+            <img src="images/detailpage/photo_detailpagina/5.jpg">
+            <img src="images/detailpage/photo_detailpagina/6.jpg">
+            <img src="images/detailpage/photo_detailpagina/7.jpg">
+            <img src="images/detailpage/photo_detailpagina/8.jpg">
+            <img src="images/detailpage/photo_detailpagina/9.jpg">
+            <img src="images/detailpage/photo_detailpagina/10.jpg">
+            <img src="images/detailpage/photo_detailpagina/11.jpg">
+            <img src="images/detailpage/photo_detailpagina/12.jpg">
         </section>
         <form>
             <h3>Join the Notebook Therapy Early Launch list!</h3>
@@ -119,6 +140,10 @@
             <div><input type="text" placeholder="Email address"></div>
             <div><button>Join the early list</button></div>
         </form>
+        <h3>back to top</h3>
+        <section>
+            <p>Reviews</p>
+        </section>
     </main>
     <footer>
         <p>Join over <span>1 million</span> followers on instagram &#169; NotebookTherapy 2020</p>
