--- a/index.html
+++ b/index.html
@@ -18,67 +18,71 @@
 <body>
     <header>
         <section>
-            <h2>shipping free worldwide as usual</h2>
+            <h3>shipping free worldwide as usual</h3>
         </section>
         <section>
-            <button class="hamburger"><img src="images/iconen/menu.png"></button>
             <nav>
-                <ul>
-                    <li><a>top selling</a></li>
-                    <li><a>newest additions</a></li>
-                    <li><a>trending</a></li>
-                    <li><a>bullet journal</a></li>
-                    <li><a>tsuki collection</a></li>
-                    <li><a>bags</a></li>
-                    <li><a>gifts</a></li>
-                </ul>
-                <ul>
-                    <li>
-                        <h3>Browse by Catergory</h3>
-                    </li>
-                    <li><a>Notebooks</a></li>
-                    <li><a>Tote Bags</a></li>
-                    <li><a>Pens</a></li>
-                    <li><a>Pencil Cases</a></li>
-                    <li><a>Stickers</a></li>
-                    <li><a>Backpacks</a></li>
-                    <li><a>Plushies</a></li>
-                    <li><a>Phone Cases</a></li>
-                    <li><a>Diffusers</a></li>
-                    <li><a>Desk Accessories</a></li>
-                    <li><a>Washi Tape</a></li>
-                    <li><a>Pins</a></li>
-                    <li><a>Stamps</a></li>
-                    <li><a>Sticky Notes</a></li>
-                    <li><a>Tsuki Collection</a></li>
-                    <li><a>Accessories</a></li>
-                    <li><a>Search</a></li>
-                </ul>
-                <ul>
-                    <li>
-                        <h3>Customer Info</h3>
-                    </li>
-                    <li><a>Blog</a></li>
-                    <li><a>About us</a></li>
-                    <li><a>Shipping &amp; Returns</a></li>
-                    <li><a>Common Questions</a></li>
-                    <li><a>Customer Reviews</a></li>
-                    <li><a>Blogger or Influencer?</a></li>
-                    <li><a>Contact Us</a></li>
-                </ul>
+                <div class="navbar">
+                    <button class="hamburger"><img src="images/iconen/menu.png"></button>
+                    <button><img src="images/iconen/loupe.svg" alt="search"></button>
+                    <a><img src="images/boringlonggrey_300x.png" class="headerimg" alt="Notebook Therapy" alt="go to homepage"></a>
+                    <button><img src="images/iconen/shopping-bag.png" alt="shoppingbag"></button>
+                </div>
+                <div class="menucontent">
+                    <ul class="desktopmenu">
+                        <li><a>all categories</a></li>
+                        <li><a>newest additions</a></li>
+                        <li><a>trending</a></li>
+                        <li><a>bullet journal</a></li>
+                        <li><a>tsuki collection</a></li>
+                        <li><a>bags</a></li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <h3>Browse by Catergory</h3>
+                        </li>
+                        <li><a>Notebooks</a></li>
+                        <li><a>Tote Bags</a></li>
+                        <li><a>Pens</a></li>
+                        <li><a>Pencil Cases</a></li>
+                        <li><a>Stickers</a></li>
+                        <li><a>Backpacks</a></li>
+                        <li><a>Plushies</a></li>
+                        <li><a>Phone Cases</a></li>
+                        <li><a>Diffusers</a></li>
+                        <li><a>Desk Accessories</a></li>
+                        <li><a>Washi Tape</a></li>
+                        <li><a>Pins</a></li>
+                        <li><a>Stamps</a></li>
+                        <li><a>Sticky Notes</a></li>
+                        <li><a>Tsuki Collection</a></li>
+                        <li><a>Accessories</a></li>
+                        <li><a>Search</a></li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <h3>Customer Info</h3>
+                        </li>
+                        <li><a>Blog</a></li>
+                        <li><a>About us</a></li>
+                        <li><a>Shipping &amp; Returns</a></li>
+                        <li><a>Common Questions</a></li>
+                        <li><a>Customer Reviews</a></li>
+                        <li><a>Blogger or Influencer?</a></li>
+                        <li><a>Contact Us</a></li>
+                    </ul>
+                </div>
             </nav>
-            <a><img src="images/boringlonggrey_300x.png" class="headerimg" alt="Notebook Therapy" alt="go to homepage"></a>
-            <button><img src="images/iconen/shopping-bag.png" alt="shoppingbag"></button>
         </section>
         <section>
-            <img src="images/header_img/headerlogo.png" alt="header img">
-            <img src="images/header_img/headerimg.jpg" alt="headerimg">
+            <img src="images/header_img/headerlogo.png" alt="headerimglogo">
+            <img src="images/header_img/desktopconstellation.jpg" alt="headerimg">
         </section>
     </header>
     <main>
         <!--Trending now-->
-        <h2><span>Trending Now</span></h2>
-        <section>
+        <h2>Trending Now</h2>
+        <section class="products">
             <a>
                 <article>
                     <img src="images/trending_now/product-image-538700474_300x.jpg" alt="double_sided_highlighters">
@@ -128,7 +132,7 @@
                     <p><span class="oldprice">€25.33 EUR</span> €18.57 EUR</p>
                 </article>
             </a>
-            <a  href="detailpagina.html">
+            <a href="detailpagina.html">
                 <article>
                     <img src="images/trending_now/2_9ec899a1-399d-449c-a5a1-7fd2b3dba521_300x.jpg" alt="pencil_case_winter">
                     <h4>Tsuki Pop-up Pencil Case 'Winter Edition'</h4>
@@ -163,23 +167,23 @@
                     <p><span class="oldprice">€17.73 EUR</span> €16.88 EUR</p>
                 </article>
             </a>
-            <h3><button>Show more</button></h3>
+            <button>Show more</button>
         </section>
         <!--Slideshow-->
-        <section>
+        <section class="slider">
             <h2>Join 1 million+ followers on Instagram</h2>
             <article>
-                <ol>
+                <ol class="instagram_slider">
                     <li><img src="images/slider/1_2ca86cdc-679c-480e-888b-b125909f5b10_600x.png" alt="instagram1"></li>
-                    <li><img src="images/slider/2_600x.png" alt="instagram1"></li>
-                    <li><img src="images/slider/3_600x.png" alt="instagram1"></li>
-                    <li><img src="images/slider/4_600x.png" alt="instagram1"></li>
+                    <li><img src="images/slider/2_600x.png" alt="instagram2"></li>
+                    <li><img src="images/slider/3_600x.png" alt="instagram3"></li>
+                    <li><img src="images/slider/4_600x.png" alt="instagram4"></li>
                 </ol>
             </article>
         </section>
         <!--2020 Picks-->
-        <h2><span>2020 picks</span></h2>
-        <section>
+        <h2>2020 picks</h2>
+        <section class="products">
             <a>
                 <article>
                     <img src="images/2020_picks/product-image-476618778_300x.jpg" alt="mildliner_highlighters">
@@ -265,113 +269,97 @@
                 </article>
             </a>
         </section>
-        <section>
-
-        </section>
         <!--Collections-->
         <h2><span>shop by collection</span></h2>
-        <section>
-            <a>
-                <article>
+        <section class="shopcollection">
+            <div class="photocollection">
+                <a>
                     <img src="images/collections/OUR-STORY-BEGINS-Blue-House-Series-Notebook-Color-Hardcover-Notebook-32K-A5-Fresh-Beautiful-1PCS_1024x1024-2_300X_crop_center.jpg" alt="ourstorybegins_notebook">
                     <h4>Notebooks</h4>
-                </article>
-            </a>
-            <a>
-                <article>
+                </a>
+                <a>
                     <img src="images/collections/Raged-Sheep-Women-Shopping-Bag-Ladies-One-Shoulder-Bag-Totes-Eco-Shopping-Bag-Daily-Use-Foldable_fd923a47-5d42-4071-b5dc-3ba.jpg" alt="raged_sheep_shoulder_bag">
                     <h4>Bags</h4>
-                </article>
-            </a>
-            <a>
-                <article>
+                </a>
+                <a>
                     <img src="images/collections/product-image-326413417_1024x1024_0c4b205d-0d65-42b3-89bc-e9be3427718a_539x_crop_center.jpg" alt="gradient_sticky_memo_notes">
                     <h4>Stickynotes</h4>
-                </article>
-            </a>
-            <a>
-                <article>
+                </a>
+                <a>
                     <img src="images/collections/High-Quality-220ML-Ultrasonic-Air-Humidifier-Aroma-Essential-Oil-Diffuser-for-Home-Car-USB-Fogger-Mist_1024x1024_e64257a7-02.jpg" alt="diffusers">
                     <h4>Diffusers</h4>
-                </article>
-            </a>
-            <a>
-                <article>
+                </a>
+                <a>
                     <img src="images/collections/6-Pcs-set-Japanese-Stationery-muji-style-Mild-Liner-Double-Headed-Milkliner-Pen-Highlighter-Marker-for_1024x1024_c341add3-68.jpg" alt="japanese_mildliners">
                     <h4>Pens</h4>
-                </article>
-            </a>
-            <a>
-                <article>
+                </a>
+                <a>
                     <img src="images/collections/product-image-801094748_1024x1024_6071fcc8-b4d5-4c24-aa7d-46aa67b25640_539x_crop_center.jpg" alt="iphone_cases">
                     <h4>Phone Cases</h4>
-                </article>
-            </a>
-            <a>
-                <ul>
-                    <li>Top Selling</li>
-                    <li>Trending</li>
-                    <li>New Additions</li>
-                    <li>Pens</li>
-                    <li>Stickers</li>
-                    <li>Plushies</li>
-                    <li>Pencil Cases</li>
-                    <li>Notebooks</li>
-                    <li>Washi Tape</li>
-                    <li>Sticky Notes</li>
-                    <li>Bags</li>
-                    <li>Accessories</li>
-                </ul>
-            </a>
+                </a>
+            </div>
+            <ul>
+                <li><a>Top Selling</a></li>
+                <li><a>Trending</a></li>
+                <li><a>New Additions</a></li>
+                <li><a>Pens</a></li>
+                <li><a>Stickers</a></li>
+                <li><a>Plushies</a></li>
+                <li><a>Pencil Cases</a></li>
+                <li><a>Notebooks</a></li>
+                <li><a>Washi Tape</a></li>
+                <li><a>Sticky Notes</a></li>
+                <li><a>Bags</a></li>
+                <li><a>Accessories</a></li>
+            </ul>
         </section>
-        <section>
+        <section class="blog_posts">
             <h2>Blog Posts</h2>
             <article>
-                <img src="images/blog_posts/unnamed_b46f6fce-3454-4fef-b73f-0e67dd1ee2fb_x370.jpg" alt="monthly_phone_wallpaper">
-                <div class="text">
-                    <h4>Monthly Phone Wallpaper</h4>
-                    <h5>By notebook therapy x @Milktuart on november 26, 2020</h5>
-                    <p>Monthly Phone Wallpaper We're back with another phone wallpaper for you this month! This wallpaper is extra special because it was created by @milkkoyo! She is known for her super cute...</p>
-                </div>
-                <img src="images/blog_posts/unnamed_5c54d735-f8f2-4d4a-8703-8dde0b3a3d5d_x370.png" alt="december_blogposts">
-                <div class="text">
-                    <h4></h4>
-                    <h5></h5>
-                    <p></p>
-                </div>
-                <img src="images/blog_posts/unnamed_f29e2ea8-3894-4edf-841c-88cd951ed5e1_x370.jpg" alt="10reasonstobulletjournal_blogposts">
-                <div class="text">
-                    <h4></h4>
-                    <h5></h5>
-                    <p></p>
-                </div>
-                <img src="images/blog_posts/unnamed_ac740ee4-6886-40b4-86b8-3188e3800cde_x370.jpg" alt="midnighteditionbulletjournal_blogposts">
-                <div class="text">
-                    <h4></h4>
-                    <h5></h5>
-                    <p></p>
-                </div>
-                <img src="images/blog_posts/unnamed_e8eb8655-649e-4fdc-9710-a341861c7911_x370.jpg" alt="printable_blogposts">
-                <div class="text">
-                    <h4></h4>
-                    <h5></h5>
-                    <p></p>
-                </div>
-                <img src="images/blog_posts/unnamed_877faeec-9774-4e08-ab56-92f33b179b45_x370.jpg" alt="halloween_blogposts">
-                <div class="text">
-                    <h4></h4>
-                    <h5></h5>
-                    <p></p>
-                </div>
-                <div>
-                    <span class="dot" onclick="Slide1"></span>
-                    <span class="dot" onclick="Slide2"></span>
-                    <span class="dot" onclick="Slide3"></span>
-                    <span class="dot" onclick="Slide4"></span>
-                    <span class="dot" onclick="Slide5"></span>
-                    <span class="dot" onclick="Slide6"></span>
-                </div>
+                <ol>
+                    <li>
+                        <img src="images/blog_posts/unnamed_e9b2e0c3-b72f-45a1-b620-926169d08dad_x370.jpg" alt="monthly_phone_wallpaper">
+                        <h4>Free 2021 Year In Pixels Bullet Journal Printable</h4>
+                        <h5>By @artbyadorel on january 01, 2021</h5>
+                        <p>Free 2021 Year in Pixels Bullet Journal Printable. Want to efficiently track your moods, habits, or anything else in a simple but colorful way? Notebook Therapy collaborated with amazing...</p>
+                    </li>
+                    <li>
+                        <img src="images/blog_posts/unnamed_5c54d735-f8f2-4d4a-8703-8dde0b3a3d5d_x370.png" alt="december_blogposts">
+                        <h4>Free 2021 Year AT a Glance Page Bullet Journal Printable</h4>
+                        <h5>By @mypeachnotes on december 30, 2020</h5>
+                        <p>Free Year At a Glance Bullet Journal Printable. Need a 2021 calendar for your bullet journals Year at a Glance page? We know how important it is to keep all your...</p>
+                    </li>
+                    <li>
+                        <img src="images/blog_posts/unnamed_f29e2ea8-3894-4edf-841c-88cd951ed5e1_x370.jpg" alt="10reasonstobulletjournal_blogposts">
+                        <h4>Free 2021 Goals Page Bullet Journal Printable</h4>
+                        <h5>By @Art_n_foxes on december 28, 2020</h5>
+                        <p>Free 2021 Goals Bullet Journal Printable. Do you have any New Years Resolutions? We always love a fresh start so we teamed up with @art_n_foxes to create a 2021 bullet journal goals...</p>
+                    </li>
+                    <li>
+                        <img src="images/blog_posts/unnamed_ac740ee4-6886-40b4-86b8-3188e3800cde_x370.jpg" alt="midnighteditionbulletjournal_blogposts">
+                        <h4>Monthly Phone Wallpaper</h4>
+                        <h5>By notebook therapy on november 26, 2020</h5>
+                        <p>Monthly Phone Wallpaper. Can you believe 2020 is almost over? To celebrate we've designed another phone wallpaper for you to use this month - totally free! Our theme for this...</p>
+                    </li>
+                    <li>
+                        <img src="images/blog_posts/unnamed_e8eb8655-649e-4fdc-9710-a341861c7911_x370.jpg" alt="printable_blogposts">
+                        <h4>Bullet Journal Monthly Printable Calendar</h4>
+                        <h5>By notebook therapy on november 25, 2020</h5>
+                        <p>Monthly Calendar Printable. Are you ready to start fresh in 2021? We wish your new year starts off as magical as the starry galaxy. That's why our design team at...</p>
+                    </li>
+                    <li>
+                        <img src="images/blog_posts/unnamed_877faeec-9774-4e08-ab56-92f33b179b45_x370.jpg" alt="halloween_blogposts">
+                        <h4>10 Reasons Why You Should Bullet Journal</h4>
+                        <h5>by @artbyadorel on november 21, 2020</h5>
+                        <p>10 Reasons Why You Should Bullet Journal by Adorel (@artbyadorel). You might have heard the term 'bullet journalling' floating around for a while now. Maybe you have been wondering to yourself, "why...</p>
+                    </li>
+                </ol>
             </article>
+            <div id="slideshow">
+                <h3>Free Shipping on all orders</h3>
+                <h3>Full 30-day return policy</h3>
+                <h3>join 1000's of stationary-addicts</h3>
+            </div>
         </section>
     </main>
     <footer>
@@ -413,6 +401,4 @@
         </section>
     </footer>
     <script type="text/javascript" src="scripts/script.js"></script>
-</body>
-
-</html>
+</body></html>
