--- a/index.html
+++ b/index.html
@@ -18,23 +18,24 @@
 <body>
     <header>
         <section>
-            <h3>shipping free worldwide as usual</h3>
+            <h3>shipping free worldwide as usual🚚</h3>
         </section>
         <section>
+            <h2>Navigation</h2>
             <nav>
                 <div class="navbar">
-                    <button class="hamburger"><img src="images/iconen/menu.png"></button>
+                    <button class="hamburger"><img src="images/iconen/menu.png" alt="hamburgermenu"></button>
                     <button><img src="images/iconen/loupe.svg" alt="search"></button>
-                    <a><img src="images/boringlonggrey_300x.png" class="headerimg" alt="Notebook Therapy" alt="go to homepage"></a>
+                    <a><img src="images/boringlonggrey_300x.png" class="headerimg" alt="Notebook Therapy"></a>
                     <button><img src="images/iconen/shopping-bag.png" alt="shoppingbag"></button>
                 </div>
                 <div class="menucontent">
                     <ul class="desktopmenu">
-                        <li><a>all categories</a></li>
+                        <li><a>all categories 👇</a></li>
                         <li><a>newest additions</a></li>
                         <li><a>trending</a></li>
                         <li><a>bullet journal</a></li>
-                        <li><a>tsuki collection</a></li>
+                        <li><a>tsuki collection 🌙</a></li>
                         <li><a>bags</a></li>
                     </ul>
                     <ul>
@@ -55,7 +56,7 @@
                         <li><a>Pins</a></li>
                         <li><a>Stamps</a></li>
                         <li><a>Sticky Notes</a></li>
-                        <li><a>Tsuki Collection</a></li>
+                        <li><a>Tsuki Collection 🌙</a></li>
                         <li><a>Accessories</a></li>
                         <li><a>Search</a></li>
                     </ul>
@@ -75,6 +76,7 @@
             </nav>
         </section>
         <section>
+            <h5>header image</h5>
             <img src="images/header_img/headerlogo.png" alt="headerimglogo">
             <img src="images/header_img/desktopconstellation.jpg" alt="headerimg">
         </section>
@@ -83,6 +85,7 @@
         <!--Trending now-->
         <h2>Trending Now</h2>
         <section class="products">
+            <h2>Products</h2>
             <a>
                 <article>
                     <img src="images/trending_now/product-image-538700474_300x.jpg" alt="double_sided_highlighters">
@@ -132,7 +135,7 @@
                     <p><span class="oldprice">€25.33 EUR</span> €18.57 EUR</p>
                 </article>
             </a>
-            <a href="detailpagina.html">
+            <a class="detail" href="detailpagina.html">
                 <article>
                     <img src="images/trending_now/2_9ec899a1-399d-449c-a5a1-7fd2b3dba521_300x.jpg" alt="pencil_case_winter">
                     <h4>Tsuki Pop-up Pencil Case 'Winter Edition'</h4>
@@ -167,12 +170,20 @@
                     <p><span class="oldprice">€17.73 EUR</span> €16.88 EUR</p>
                 </article>
             </a>
-            <button>Show more</button>
+            <div class="button">
+                <button>Show more</button>
+            </div>
         </section>
+        <div class="shippinginfo">
+            <h3>Free Shipping on all orders</h3>
+            <h3>Full 30-day return policy</h3>
+            <h3>join 1000's of stationary-addicts</h3>
+        </div>
         <!--Slideshow-->
         <section class="slider">
             <h2>Join 1 million+ followers on Instagram</h2>
             <article>
+                <h2>Instagram</h2>
                 <ol class="instagram_slider">
                     <li><img src="images/slider/1_2ca86cdc-679c-480e-888b-b125909f5b10_600x.png" alt="instagram1"></li>
                     <li><img src="images/slider/2_600x.png" alt="instagram2"></li>
@@ -184,6 +195,7 @@
         <!--2020 Picks-->
         <h2>2020 picks</h2>
         <section class="products">
+            <h2>2020 products</h2>
             <a>
                 <article>
                     <img src="images/2020_picks/product-image-476618778_300x.jpg" alt="mildliner_highlighters">
@@ -355,7 +367,7 @@
                     </li>
                 </ol>
             </article>
-            <div id="slideshow">
+            <div class="shippinginfo">
                 <h3>Free Shipping on all orders</h3>
                 <h3>Full 30-day return policy</h3>
                 <h3>join 1000's of stationary-addicts</h3>
@@ -364,41 +376,45 @@
     </main>
     <footer>
         <p>Join over <span>1 million</span> followers on instagram &#169; NotebookTherapy 2020</p>
-        <section>
-            <h3>Info</h3>
-            <ul>
-                <li><a>Blog</a></li>
-                <li><a>About us</a></li>
-                <li><a>Shipping &amp; Returns</a></li>
-                <li><a>Common Questions</a></li>
-                <li><a>Customer Reviews</a></li>
-                <li><a>Blogger or Influencer?</a></li>
-                <li><a>Contact us</a></li>
-            </ul>
-        </section>
-        <section>
-            <h3>shop</h3>
-            <ul>
-                <li><a>New Additions</a></li>
-                <li><a>Top Selling</a></li>
-                <li><a>Notebooks</a></li>
-                <li><a>Phone Cases</a></li>
-                <li><a>Bags</a></li>
-                <li><a>Pens</a></li>
-                <li><a>Pencil Cases</a></li>
-                <li><a>Stickers</a></li>
-                <li><a>Washi Tape</a></li>
-                <li><a>Gift Cards</a></li>
-                <li><a>More +</a></li>
-            </ul>
-        </section>
-        <section>
-            <h2>Join for special updates &amp; discounts</h2>
-            <form>
-                <input type="text" placeholder="enter your email address">
-                <button>Join</button>
-            </form>
-        </section>
+        <div class="footerresponsive">
+            <section class="footerinfo">
+                <h3>Info</h3>
+                <ul>
+                    <li><a>Blog</a></li>
+                    <li><a>About us</a></li>
+                    <li><a>Shipping &amp; Returns</a></li>
+                    <li><a>Common Questions</a></li>
+                    <li><a>Customer Reviews</a></li>
+                    <li><a>Blogger or Influencer?</a></li>
+                    <li><a>Contact us</a></li>
+                </ul>
+            </section>
+            <section class="footershop">
+                <h3>shop</h3>
+                <ul>
+                    <li><a>New Additions</a></li>
+                    <li><a>Top Selling</a></li>
+                    <li><a>Notebooks</a></li>
+                    <li><a>Phone Cases</a></li>
+                    <li><a>Bags</a></li>
+                    <li><a>Pens</a></li>
+                    <li><a>Pencil Cases</a></li>
+                    <li><a>Stickers</a></li>
+                    <li><a>Washi Tape</a></li>
+                    <li><a>Gift Cards</a></li>
+                    <li><a>More +</a></li>
+                </ul>
+            </section>
+            <section class="form">
+                <h2>Join for special updates &amp; discounts 👇</h2>
+                <form>
+                    <input type="text" placeholder="enter your email address">
+                    <button>Join</button>
+                </form>
+            </section>
+        </div>
     </footer>
-    <script type="text/javascript" src="scripts/script.js"></script>
-</body></html>
+    <script src="scripts/script.js"></script>
+</body>
+
+</html>
